--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,16 @@ server:
       context-path: /calc-becas
 spring:
   datasource:
-    url: jdbc:mysql://${HOST_NAME:127.0.0.1}:${BD_PORT:3311}/${BD_NAME:root}?useSSL=false
-    username: ${BD_USER:root}
-    password: ${BD_PASS:2MMUeZzn8LdGYg9}
+    url: jdbc:mysql://${HOST_NAME:127.0.0.1}:${BD_PORT:3311}/${BD_NAME:calcbecabd}?useSSL=false
+    username: ${BD_USER:dbuser}
+    password: ${BD_PASS:dbpassword}
 key:
   encode:
     crypto: $#u1!N51*5M412&
 location:
-  file: /Users/lMarcoss/workspace-leoa/ServicioSocial/files-dev/
+  file: /Users/lMarcoss/workspace-leo/ServicioSocial/files-dev/
+logging:
+  level:
+    org:
+      springframework:
+        web= DEBUG
