--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>edu.calc</groupId>
     <artifactId>becas</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1</version>
     <name>becas</name>
     <description>Calculadora de porcentaje de becas</description>
 
