--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8081
+  port: 6061
   servlet:
       context-path: /horarios/api
-spring:
-  datasource:
-    url: jdbc:mysql://${HOST_NAME:127.0.0.1}:${BD_PORT:3311}/${BD_NAME:calcbecabd}?useSSL=false
-    #url: jdbc:mysql://${HOST_NAME:192.160.0.12}:${BD_PORT:3306}/${BD_NAME:calcbecabd}?useSSL=false
-    username: ${BD_USER:dbuser}
-    password: ${BD_PASS:dbpassword}
+#spring:
+#  datasource:
+#    url: jdbc:mysql://${HOST_NAME:127.0.0.1}:${BD_PORT:3311}/${BD_NAME:calcbecabd}?useSSL=false
+#    #url: jdbc:mysql://${HOST_NAME:192.160.0.12}:${BD_PORT:3306}/${BD_NAME:calcbecabd}?useSSL=false
+#    username: ${BD_USER:dbuser}
+#    password: ${BD_PASS:dbpassword}
 key:
   encode:
     crypto: $#u1!N51*5M412&
